# ai-research-template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PLAN.md  README.md  SPEC.md  TEMPLATE.md  copier.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  validate-branch-name.yml
.sisyphus/: boulder.json  ralph-loop.local.md  roadmap.md  tech-debt-tracker.md
.sisyphus/drafts/: spec-md-addition.md
.sisyphus/notepads/agent-engineering-template/: learnings.md
.sisyphus/notepads/notify-module/: learnings.md
.sisyphus/notepads/task-6/: decisions.md  learnings.md
.sisyphus/notepads/template_agent/: learnings.md
.sisyphus/plans/: agent-engineering-template.md  copier-template-conversion.md  notify-module.md  plan-consolidation.md  spec-md-addition.md
docs/: PLANS.md  git-branch-naming.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: pipeline-update.md
src/my_project/: __init__.py
template/: ARCHITECTURE.md.jinja  README.md.jinja  SPEC.md.jinja  pyproject.toml.jinja
template/.github/ISSUE_TEMPLATE/: ai-task.yml  bug-report.yml  feature-request.yml
template/docs/: QUALITY_SCORE.md
template/docs/design-docs/: core-beliefs.md  index.md
template/tests/: test_hello.py.jinja
template/tests/test_notify/: test_core.py.jinja  test_email_template.py.jinja  test_evidence.py.jinja  test_integration.py.jinja  test_redact.py.jinja
template/{{project_name_snake}}/: __init__.py.jinja  hello.py
template/{{project_name_snake}}/notify/: __init__.py  core.py  (+3 more)
tests/: test_hello.py  test_template.py
