[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-research-template"
version = "0.1.0"
requires-python = ">=3.12"
description = "Copier template for AI-assisted research projects"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-copie>=0.1.0",
    "pyyaml>=6.0.3",
]

[tool.hatch.build.targets.wheel]
only-include = ["pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
